there was an issue with the wrapping of the comment body input box. Fixed now.

--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,8 @@ body {
   padding: 10%;
   width: 20%
 }
-#commentPostSection {
+
+#commentPostForm {
   margin-top: 5%;
   margin-left: 5%;
   margin-right: 5%;
@@ -179,28 +180,33 @@ body {
   background-color: white;
   height: 10rem;
   padding: 5%;
+  padding-top: 2%;
   align-content: center;
-}
-#commentPostForm {
+  max-width: 581px;
+  border-radius: 10px;
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
-  grid-template-areas: 'commentPostBody commentPostBody' '. commentPostSubmit';
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 30% 40% 30%;
+  grid-template-areas: "commentPostHeading ." "commentPostBody commentPostBody" ". commentPostSubmit";
   gap: 10px
+}
+#commentPostHeading {
+  grid-area: commentPostHeading;
+  justify-self: left;
 }
 #commentPostBody {
   grid-area: commentPostBody;
   border:#213547;
-  height: 100%;
-  width: 90%;
+  height: auto;
   border:#213547;
   border-style: inset;
 }
 #commentPostSubmit {
   grid-area: commentPostSubmit;
   border: #888;
-  height: 80%;
-  align-self:flex-end;
+  height: auto;
+  justify-self: right;
+  width: 100%
 }
 
 #commentsHeading {
